# arbitex

./: .dockerignore  .editorconfig  .env.example  .env.prod.example  .env.production.example  .env.secrets.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.prod-nginx.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-vps.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/auto/: README.md  next.config.js  package.json  tailwind.config.js
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.js
apps/worker/: Dockerfile  package.json
contracts/: README.md  foundry.toml
contracts/abi/: FlashArb.json
contracts/solana/: Anchor.toml  (+2 more)
contracts/solana/programs/auto-token/: Cargo.toml
contracts/solana/programs/auto-token/src/: lib.rs
docs/: DEPLOY.md  DNS_SETUP.md  GITHUB_SETUP.md  GIT_PUSH_SETUP.md  HOSTINGER_SETUP.md  TROUBLESHOOTING.md  VPS-24-7.md
e2e/: auth.setup.ts  dashboard.spec.ts
infra/: Caddyfile  Dockerfile.migrate  dev-keystore.json  prometheus.yml
scripts/: arbitex.sh  create-keystore.mjs  deploy-vps.sh  ensure-docker-up.sh  launchd-install.sh  launchd-uninstall.sh  run-arbitex-fast.sh  run-arbitex.sh  setup-env.sh  setup-github-repo.sh  verify-dns.sh  vps-bootstrap.sh  vps-maintenance.sh  vps-quick.sh
(+123 files in other folders)
