[package]
name = "auto-token"
version = "0.1.0"
description = "$AUTO — automated automations. SPL Token-2022 with sealed buyback reserve."
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "auto_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.30.1", features = ["token-2022", "token-2022-extensions"] }
spl-token-2022 = { version = "3.0", features = ["no-entrypoint"] }
